--- a/webroot/css/schools.css
+++ b/webroot/css/schools.css
@@ -176,7 +176,7 @@ body {
 
 #rights{
 	height: 125px;
-	width: 230px;
+	width: 245px;
 	float: left;
 	display: inline-block;
 	background-image: url('../img/rights.png');
@@ -238,7 +238,7 @@ li a:hover{
 
 #logo{
 	height: 50px;
-	width: 110px;
+	width: 120px;
 	float: left;
 	display: inline-block;
 	cursor: pointer;
@@ -269,7 +269,7 @@ li a:hover{
 #logo_home{
 	position: absolute;
   top: 35%;
-  width: 170px;
+  width: 240px;
 	left:50%;
 	transform:translate(-50%,-50%);
 }
@@ -327,8 +327,24 @@ h1{
 #goodbye{
 	width: 100%;
   float: left;
-  padding: 90px;
-  background: white;
+  *padding: 90px;
+  *background-image: url('../img/basket.png');
+  background-size: cover;
+  height: 1300px;
+}
+
+#supporters{
+	width: 100%;
+  float: left;
+  height: 400px;
+  position: relative;
+}
+
+#supporters img{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
 }
 
 #goodbye p {
@@ -569,8 +585,9 @@ h1 b {
 }
 
 #apply {
-	float: left;
-	width: 100%;
+	display: table;
+	width: 100%;    
+	height: 100%;
 	background-image: url('../img/fondo_apply.png');
 	background-size: cover;
 	background-repeat: no-repeat;
