--- a/webroot/css/schools.css
+++ b/webroot/css/schools.css
@@ -154,10 +154,14 @@ body {
   z-index: 1000;
   position: fixed;
   top: 0;
-  left: 0;
   width: 100%;
 	background: rgba(0,0,0,0.5);
 	padding: 0 200px;
+  right: 0;
+  left: 0;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1920px;
 }
 
 #plan{
@@ -218,6 +222,16 @@ body {
 	background-repeat: no-repeat;
 }
 
+.loader {
+   position: fixed;
+   left: 0px;
+   top: 0px;
+   width: 100%;
+   height: 100%;
+   z-index: 10000;
+   background: url('../img/loading.gif') 50% 50% no-repeat black ;
+}
+
 ul{
 	float: right;
 	list-style-type: none;
@@ -233,6 +247,9 @@ ul{
 	padding-top: 0px;
 }
 
+#title_gb{
+  letter-spacing: 0px !important;
+}
 
 li{
 	margin-bottom: 5px;
@@ -398,32 +415,32 @@ section p, #bonus p {
 
 #title_gb{
 	color: white;
-  margin-bottom: 50px;    
+  margin-bottom: 50px;
   margin-top: 205px;
 }
 
 #title_zv{
 	color: white;
-  margin-bottom: 50px;    
+  margin-bottom: 50px;
   margin-top: 100px;
 }
 
 #title_w{
 	color: white;
-  margin-bottom: 90px;    
+  margin-bottom: 90px;
   margin-top: 100px;
 }
 
 #title_b{
 	color: white;
-  margin-bottom: 40px;    
+  margin-bottom: 40px;
   text-align: right;
 }
 
 #title_s{
 	color: black;
-  margin-bottom: 40px; 
-      line-height: 1.5; 
+  margin-bottom: 40px;
+      line-height: 1.5;
 }
 
 #kobe{
@@ -627,7 +644,7 @@ h1 b {
 
 #apply {
 	display: table;
-	width: 100%;    
+	width: 100%;
 	height: 100%;
 	background-image: url('../img/fondo_apply.png');
 	background-size: cover;
@@ -748,7 +765,7 @@ hr{
 	width: 1px;
 	background:white;
 	position: absolute;
-  top: 50%;
+  top: 40%;
 	right:0;
 	transform:translate(-50%,-50%);
 }
@@ -955,6 +972,7 @@ to{opacity: 1;}
 	height: 3439px;
 }
 #chrome_{
+  text-align: center;
 	width: 100%;
 	float: left;
 	padding: 0 19%;
@@ -1315,7 +1333,7 @@ to{opacity: 1;}
 #confirmation h2 {
     margin-top: 100px;
 }
-	
+
   #chromecast {
     width: 270px;
     margin-top:12%;
