--- a/webroot/css/schools_2.css
+++ b/webroot/css/schools_2.css
@@ -217,6 +217,17 @@ body {
 	background-repeat: no-repeat;
 }
 
+.loader {
+   position: fixed;
+   left: 0px;
+   top: 0px;
+   width: 100%;
+   height: 100%;
+   z-index: 10000;
+   background: url('../img/loading.gif') 50% 50% no-repeat #121314 ;
+}
+
+
 ul{
 	float: right;
 	list-style-type: none;
@@ -397,32 +408,32 @@ section p, #bonus p {
 
 #title_gb{
 	color: white;
-  margin-bottom: 50px;    
+  margin-bottom: 50px;
   margin-top: 205px;
 }
 
 #title_zv{
 	color: white;
-  margin-bottom: 50px;    
+  margin-bottom: 50px;
   margin-top: 100px;
 }
 
 #title_w{
 	color: white;
-  margin-bottom: 90px;    
+  margin-bottom: 90px;
   margin-top: 100px;
 }
 
 #title_b{
 	color: white;
-  margin-bottom: 40px;    
+  margin-bottom: 40px;
   text-align: right;
 }
 
 #title_s{
 	color: black;
-  margin-bottom: 40px; 
-      line-height: 1.5; 
+  margin-bottom: 40px;
+      line-height: 1.5;
 }
 
 #kobe{
@@ -626,7 +637,7 @@ h1 b {
 
 #apply {
 	display: table;
-	width: 100%;    
+	width: 100%;
 	height: 100%;
 	background-image: url('../img/fondo_apply.png');
 	background-size: cover;
@@ -1314,7 +1325,7 @@ to{opacity: 1;}
 #confirmation h2 {
     margin-top: 100px;
 }
-	
+
   #chromecast {
     width: 270px;
     margin-top:12%;
@@ -1721,4 +1732,15 @@ to{opacity: 1;}
 	#apply{
 		    padding-bottom: 150px;
 	}
+
+  #confirmation{
+    padding-bottom: 300px;
+  }
+
+  #clubs_2{
+    margin-right: 150px !important;
+  }
+  #footer ul{
+    margin-right: 50px !important;
+  }
 }
