--- a/webroot/css/schools_2.css
+++ b/webroot/css/schools_2.css
@@ -224,7 +224,7 @@ body {
    width: 100%;
    height: 100%;
    z-index: 10000;
-   background: url('../img/loading.gif') 50% 50% no-repeat #121314 ;
+   background: url('../img/loading.gif') 50% 50% no-repeat black ;
 }
 
 
@@ -1334,6 +1334,7 @@ to{opacity: 1;}
 
 #confirmation {
 	height: inherit;
+	text-align: center;
   padding-bottom: 230px;
 }
 @media(max-width: 1000px){
